Header component and image.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,8 @@
 
-<app-navigation></app-navigation>
-<app-dashboard></app-dashboard>
+<!-- <app-navigation></app-navigation>
+<app-dashboard></app-dashboard> -->
 
+<div class="header-container">
+<app-default-header></app-default-header>
+</div>
 <router-outlet></router-outlet>
