Profile Page Update

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,4 +5,5 @@
 <div class="header-container">
 <app-default-header></app-default-header>
 </div>
-<router-outlet></router-outlet>
+<app-profile></app-profile>
+<!--<router-outlet></router-outlet>-->
