--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -10,23 +10,23 @@
   (closed)="events.push('close!')">
     <mat-nav-list>
       <div>
-        <mat-list-item>
+        <mat-list-item class="vega-nav-list-item">
           <span>Home</span>
         </mat-list-item>
       </div>
 
       <div>
-        <mat-list-item>
+        <mat-list-item class="vega-nav-list-item">
           <span>Profile</span>
         </mat-list-item>
       </div>
-      <div>
-        <mat-list-item>
+      <div >
+        <mat-list-item class="vega-nav-list-item">
           <span>Leaderboard</span>
         </mat-list-item>
       </div>
       <div>
-        <mat-list-item>
+        <mat-list-item class="vega-nav-list-item">
           <span>Settings</span>
         </mat-list-item>
       </div>
