--- a/client/src/app/selector/selector.component.html
+++ b/client/src/app/selector/selector.component.html
@@ -1,5 +1,30 @@
-<mat-divider></mat-divider>
-EV Academy
-<mat-divider></mat-divider>
-LyR/Q
-<mat-divider></mat-divider>
+<hr />
+<div class="image-landing">
+    <a routerLink="/ev-academy">
+<img src="/assets/evacademy.png" />
+    </a>
+</div>
+<hr />
+<div class="image-landing">
+    <a routerLink="/sub-selector">
+        <img src="/assets/lyrq.png" />
+    </a>
+</div>
+<hr />
+<div class="image-landing">
+    <a routerLink="/sub-selector">
+    <img src="/assets/hummerev.png" />
+    </a>
+</div>
+<hr />
+<div class="image-landing">
+    <a routerLink="/sub-selector">
+    <img src="/assets/bolteuv.png" />
+    </a>
+</div>
+<hr />
+<div class="image-landing">
+    <a routerLink="/sub-selector">
+    <img src="/assets/boltev.png" />
+    </a>
+</div>
