Hide header if you are in the login page. We may want to use for different states.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,6 @@
 <app-dashboard></app-dashboard> -->
 
 <div class="header-container">
-<app-default-header></app-default-header>
+<app-default-header *ngIf="url !== '/login'"></app-default-header>
 </div>
-<app-profile></app-profile>
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
