--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,6 +3,6 @@
 <app-dashboard></app-dashboard> -->
 
 <div class="header-container">
-<app-default-header *ngIf="url !== '/login'"></app-default-header>
+<app-default-header *ngIf="url !== '/login' && url !== '/profile' && url !== '/'"></app-default-header>
 </div>
 <router-outlet></router-outlet>
