--- a/client/src/app/profile/profile.component.css
+++ b/client/src/app/profile/profile.component.css
@@ -155,3 +155,26 @@
   padding: 5px;
   min-width: 150px;
 }
+
+.box {
+  display: flex;
+  flex-flow: column;
+  height: 100vh;
+}
+.box .row {
+  border: 1px dotted #0313fc;
+}
+.box .row.header {
+  flex: auto;
+  margin: 16px;
+}
+.box .row.content {
+  flex: 33%;
+  background: #454545;
+  margin: 16px;
+}
+.box .row.footer {
+  flex: 23%;
+  background: #454545;
+  margin: 16px;
+}
