border radius profile picture

--- a/client/src/app/components/default-header/default-header.component.html
+++ b/client/src/app/components/default-header/default-header.component.html
@@ -1,5 +1,5 @@
 <div>
-    <img src="/assets/user-pic.png" />
+    <img style="border-radius: 2rem; border:2px solid #FFFFFF" src="/assets/user-pic.png" />
 </div>
 <div>
     Welcome <span class="ev-blue">Emily</span>
