--- a/client/src/app/components/default-header/default-header.component.html
+++ b/client/src/app/components/default-header/default-header.component.html
@@ -1,8 +1,8 @@
 <div>
-    <img style="border-radius: 2rem; border:2px solid #FFFFFF" src="/assets/user-pic.png" />
+    <img style="border-radius: 2rem; border:2px solid #FFFFFF; width:50px; height:50px" src="{{avatar}}" />
 </div>
 <div>
-    Welcome <span class="ev-blue">Emily</span>
+    Welcome <span class="ev-blue">{{name}}</span>
 </div>
 <div>
     What would you like to learn about today
