EV Academy and redirects.

--- a/client/src/app/ev-academy/ev-academy.component.html
+++ b/client/src/app/ev-academy/ev-academy.component.html
@@ -1,7 +1,7 @@
 <div class="ev-container">
     <mat-icon style="margin-right: 10px;">arrow_back</mat-icon><img src="/assets/evacademy.png" />
     <mat-list style="margin-left: 16px;">
-        <mat-list-item><a routerLink="/charging">Charging</a></mat-list-item>
+        <mat-list-item><a routerLink="/ev-academy-charging">Charging</a></mat-list-item>
         <mat-list-item> Weather </mat-list-item>
         <mat-list-item> Lifestyle </mat-list-item>
         <mat-list-item> Range </mat-list-item>
