Eve  charging landing.

--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.css
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.css
@@ -1,7 +1,16 @@
+.option-container-header {
+    background: #454545;
+    padding: 24px;
+    border-radius: 10px;
+    text-align: center;
+    margin: 16px 16px 0 16px;
+
+}
 .option-container {
     display: flex;
     background: #454545;
     margin: 16px auto;
+    border-radius: 10px;
 }
 
 .option-container img{
@@ -9,5 +18,13 @@ margin-right: 8px;
 }
 
 .option-container div {
+    padding: 16px;
+}
 
+.container {
+    margin: 0 16px;
+}
+
+.link-container {
+    text-align: center;
 }
