--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.html
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.html
@@ -1,18 +1,23 @@
-<header>
+<header class="option-container-header">
 <img src="/assets/switch.png" />
 <div>What is the fastests at-home charging option?</div>
 </header>
+<div class="container">
 <div class="option-container">
     <img src="/assets/option-a.png" />
-    <div>Text</div>
+    <div>The charger that comes with your GM electric vehicle is the fastest charging option.</div>
 </div>
 
 <div class="option-container">
     <img src="/assets/option-b.png" />
-    <div>Text</div>
+    <div>Some professionally-installed Level 2 chargers offer the fastest home charging available.</div>
 </div>
 
 <div class="option-container">
     <img src="/assets/option-c.png" />
-    <div>Text</div>
+    <div>DC Fast Charging is the way to go, at home or on the road.</div>
+</div>
+<div class="link-container">
+    <a href="">Upload picture of your charging setup</a>
+</div>
 </div>
