--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.html
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.html
@@ -5,17 +5,17 @@
 <div class="container">
 <div class="option-container">
     <img src="/assets/option-a.png" />
-    <div>The charger that comes with your GM electric vehicle is the fastest charging option.</div>
+    <div>Level 1 (120 volts)</div>
 </div>
 
 <div class="option-container">
     <img src="/assets/option-b.png" />
-    <div>Some professionally-installed Level 2 chargers offer the fastest home charging available.</div>
+    <div>Level 2 (240 volts)</div>
 </div>
 
 <div class="option-container">
     <img src="/assets/option-c.png" />
-    <div>DC Fast Charging is the way to go, at home or on the road.</div>
+    <div>DC Fast Charging</div>
 </div>
 <div class="link-container">
     <a href="">Upload picture of your charging setup</a>
