Profile Page Update

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,44 @@
-<p style="text-align: center; font-size: large">Dashboard works!</p>
+<div id="dashboardContainer" >
+  <div class="center-align">
+    <p>Dashboard</p>
+  </div>
+  <div id="dashFeed" class="center-content">
+    <!--    Dashboard feed goes here-->
+  </div>
+
+  <div id="myAwardsContainer">
+    <div id="myAwardsTitle" class="left-align">
+      My Awards
+    </div>
+    <div id="pointsContainer">
+
+    </div>
+
+    <div id="badgesContainer">
+
+    </div>
+
+
+  <div id="leaderboardContainer">
+    <div>
+      <p>Leaderboard</p>
+    </div>
+
+    <div id="leaderboard">
+      <div id="nameColumn">
+
+      </div>
+      <div id="pointsColumn">
+
+      </div>
+      <div id="badgesColumn">
+
+      </div>
+      <div id="levelColumn">
+
+      </div>
+
+    </div>
+  </div>
+
+</div>
