--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <!-- <app-navigation></app-navigation>
 <app-dashboard></app-dashboard> -->
-<div *ngIf="url !== '/login' && url !== '/profile' && url !== '/'" class="header-container">
+<div *ngIf="url !== '/login' && url !== '/profile' && url !== '/upload' && url !== '/'" class="header-container">
 <app-default-header></app-default-header>
 </div>
 <router-outlet></router-outlet>
