--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.html
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.html
@@ -18,6 +18,6 @@
     <div>DC Fast Charging</div>
 </div>
 <div class="link-container">
-    <a href="">Upload picture of your charging setup</a>
+    <a href="/upload">Upload picture of your charging setup</a>
 </div>
 </div>
