--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.css
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.css
@@ -11,6 +11,13 @@
     background: #454545;
     margin: 16px auto;
     border-radius: 10px;
+    border: 2px solid transparent;
+    transition: border 0.5s ease-out 100ms;
+}
+
+.option-container:hover {
+    border: 2px solid #05C3DD;
+    cursor: pointer;
 }
 
 .option-container img{
