--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -63,11 +63,11 @@
 }
 
 #dashFeed{
-  width: 354px;
-  height: 157px;
+  width: 359px;
+  height: 170px;
   background-size: cover;
-  background-image: url('src/assets/dash-feed.png');
-  margin: 10px
+  background-image: url('src/assets/dash-feed.jpg');
+  margin: 8px
 }
 
 .box {
