--- a/client/src/app/learning-experience-one/learning-experience-one.component.css
+++ b/client/src/app/learning-experience-one/learning-experience-one.component.css
@@ -4,14 +4,13 @@
   border-radius: 50%;
 }
 #answerChoices {
-  background-color:#454545;
-  width:90%;
-  height:50%;
-  border-radius:2%;
-  margin-left:5%;
+
+
+  height:20%;
+
+
   display:flex;
-  padding-top:10%;
-  padding-bottom:10%;
+
   flex-direction: row;
 }
 #answerChoices button {
@@ -32,13 +31,64 @@
   margin-top:5%;
   margin-bottom:5%;
 }
+#footer {
+  height:5%;
+  display:flex;
+  flex-direction:row;
+}
+#BTNnext {
+  margin: auto;
+  padding: 0;
+  width: 80%;
+  height: 100%;
+  border: 2px solid #05C3DD;
+  border-radius: 40px;
+  background: #05C3DD;
+  color: black;
+  font-weight: bold;
+  letter-spacing: 1px;
+  font-size: 15px;
+  font-family: 'Montserrat', sans-serif;
+  text-align: justify-all;
+  max-width:30%;
+}
+#BTNprevious {
+  margin: auto;
+  padding: 0;
+
+  width: 80%;
+  height: 100%;
+  border: 2px solid #454545;
+  border-radius: 40px;
+  background: #454545;
+  color: #05C3DD;
+  font-weight: bold;
+  letter-spacing: 1px;
+  font-size: 15px;
+  font-family: 'Montserrat', sans-serif;
+  text-align: justify-all;
+  max-width:30%;
+}
+#hidden{
+  display:flex;
+  flex-direction:row;
+}
+#answerImage {
+  width:100%;
+  height:100%;
+  max-width:500px;
+  align-items: center;
+  margin:auto;
+  display:block;
+}
 .navigationBar {
   margin-top: 20px;
   margin-left: 20px;
   margin-bottom:5%;
 }
 #achievements {
-  height:30%;
+  height:20%;
+  width:90%;
 }
 #achievements p {
   text-align:center;
