--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.css
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.css
@@ -15,6 +15,10 @@
     transition: border 0.5s ease-out 100ms;
 }
 
+.hasVoted {
+    border: 2px solid #05C3DD;
+}
+
 .option-container:hover {
     border: 2px solid #05C3DD;
     cursor: pointer;
@@ -36,4 +40,24 @@ margin-right: 8px;
 
 .link-container {
     text-align: center;
+}
+
+.next-prev-container {
+    display: flex;
+    justify-content:space-evenly;
+    margin-top: 24px;
+}
+
+.previous {
+    color: #05C3DD;
+    padding: 12px 44px;
+    cursor: pointer;
+}
+
+.next {
+    border-radius: 20px;
+    padding: 12px 44px;
+    background: #05C3DD;
+    border: 0 solid transparent;
+    cursor: pointer;
 }
