--- a/client/src/app/ev-academy-charging/ev-academy-charging.component.html
+++ b/client/src/app/ev-academy-charging/ev-academy-charging.component.html
@@ -22,6 +22,6 @@
 </div>
 <div class="next-prev-container">
     <a class="previous">Previous</a>
-    <button mat-raised-button class="next">Next</button>
+    <button mat-raised-button class="next" (click)="goNext()">Next</button>
 </div>
 </div>
