--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,21 @@
 
 <!-- <app-navigation></app-navigation>
 <app-dashboard></app-dashboard> -->
-<div *ngIf="url !== '/login' && url !== '/profile' && url !== '/upload' && url !== '/' && url !== '/ev-academy-charging'" class="header-container">
+<div *ngIf="url !== '/login' && 
+            url !== '/profile' && 
+            url !== '/upload' && 
+            url !== '/' && 
+            url !== '/ev-academy-charging' &&
+            url !== '/ev-academy-amperage' && 
+            url !== '/ev-result'" class="header-container">
 <app-default-header></app-default-header>
 </div>
 
-<div *ngIf="url == '/ev-academy-charging' || url == '/upload' || url == '/ev-academy-weather'" class="header-container">
+<div *ngIf="url == '/ev-academy-charging' || 
+            url == '/upload' || 
+            url == '/ev-academy-weather' || 
+            url == '/ev-academy-amperage' || 
+            url == '/ev-result'" class="header-container">
     <app-evacademy-header></app-evacademy-header>
     </div>
 
