Fixing Layout for Experience.

--- a/client/src/app/learning-experience-one/learning-experience-one.component.html
+++ b/client/src/app/learning-experience-one/learning-experience-one.component.html
@@ -1,5 +1,5 @@
 <div class="genericBox" id="achievements">
-  <img src="assets/electric-plug.png"/>
+  <img src="/assets/switch.png"/>
   <p>What is the amperage rating for the Dual-Level Charge Cord that will be standard or available on all 2022 and later GM EVs?</p>
 </div>
 <div id="answerChoices" class="genericBox">
