--- a/client/src/app/learning-experience-one/learning-experience-one.component.css
+++ b/client/src/app/learning-experience-one/learning-experience-one.component.css
@@ -24,12 +24,13 @@
 }
 .genericBox {
   background-color:#454545;
-  width:90%;
   border-radius:2%;
   margin:auto;
   padding:2%;
   margin-top:5%;
   margin-bottom:5%;
+  padding: 24px;
+  margin: 16px;
 }
 #footer {
   height:5%;
@@ -82,14 +83,16 @@
   display:block;
 }
 .navigationBar {
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-bottom:5%;
+  
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+
+
 }
-#achievements {
-  height:20%;
-  width:90%;
-}
+
 #achievements p {
   text-align:center;
   font-weight:bold;
