Fix navigation alignment and direction.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,6 +7,7 @@
             url !== '/' && 
             url !== '/ev-academy-charging' &&
             url !== '/ev-academy-amperage' && 
+            url !== '/ev-academy-weather' && 
             url !== '/ev-result'" class="header-container">
 <app-default-header></app-default-header>
 </div>
@@ -15,6 +16,7 @@
             url == '/upload' || 
             url == '/ev-academy-weather' || 
             url == '/ev-academy-amperage' || 
+            url == '/ev-academy-weather' || 
             url == '/ev-result'" class="header-container">
     <app-evacademy-header></app-evacademy-header>
     </div>
