--- a/client/src/app/ev-academy/ev-academy.component.html
+++ b/client/src/app/ev-academy/ev-academy.component.html
@@ -2,10 +2,10 @@
     <mat-icon style="margin-right: 10px;">arrow_back</mat-icon><img src="/assets/evacademy.png" />
     <mat-list style="margin-left: 16px;">
         <mat-list-item><a routerLink="/ev-academy-charging">Charging</a></mat-list-item>
-        <mat-list-item> Weather </mat-list-item>
-        <mat-list-item> Lifestyle </mat-list-item>
-        <mat-list-item> Range </mat-list-item>
-        <mat-list-item> Technology </mat-list-item>
-        <mat-list-item> Service </mat-list-item>
+        <mat-list-item><a routerLink="/ev-academy-weather">Weather</a></mat-list-item>
+        <mat-list-item><a routerLink="/ev-academy-charging">Lifestyle</a></mat-list-item>
+        <mat-list-item><a routerLink="/ev-academy-charging">Range</a> </mat-list-item>
+        <mat-list-item><a routerLink="/ev-academy-charging">Technology</a> </mat-list-item>
+        <mat-list-item><a routerLink="/ev-academy-charging">Service</a></mat-list-item>
        </mat-list>
 </div>
