--- a/client/src/app/ev-academy/ev-academy.component.css
+++ b/client/src/app/ev-academy/ev-academy.component.css
@@ -1,6 +1,9 @@
 .ev-container {
-    border-radius: 10px;;
+    border-radius: 10px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
     background-color: #454545;
     margin-left: 24px;
-    padding: 16px
+    padding: 16px;
+    margin-top: 24px;
 }
