--- a/client/src/app/learning-experience-one/learning-experience-one.component.css
+++ b/client/src/app/learning-experience-one/learning-experience-one.component.css
@@ -36,6 +36,7 @@
   height:5%;
   display:flex;
   flex-direction:row;
+  background: transparent;
 }
 #BTNnext {
   margin: auto;
@@ -52,6 +53,7 @@
   font-family: 'Montserrat', sans-serif;
   text-align: justify-all;
   max-width:30%;
+  cursor: pointer;
 }
 #BTNprevious {
   margin: auto;
@@ -69,6 +71,7 @@
   font-family: 'Montserrat', sans-serif;
   text-align: justify-all;
   max-width:30%;
+  cursor: pointer;
 }
 #hidden{
   display:flex;
