Fix header home icon to direct to selector.

--- a/client/src/app/components/evacademy-header/evacademy-header.component.html
+++ b/client/src/app/components/evacademy-header/evacademy-header.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <mat-icon>home</mat-icon>
+    <a routerLink="/selector"><mat-icon>home</mat-icon></a>
     <div>
         <a routerLink="/ev-academy"><img style="height: 15px;" src="/assets/evacademy.png" /></a>
     </div>
