lyrq with video added.

--- a/client/src/app/selector/selector.component.html
+++ b/client/src/app/selector/selector.component.html
@@ -6,7 +6,7 @@
 </div>
 <hr />
 <div class="image-landing">
-    <a routerLink="/sub-selector">
+    <a routerLink="/lyrq-video">
         <img src="/assets/lyrq.png" />
     </a>
 </div>
