--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,7 +10,8 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Overpass', Courier, monospace;
-    height: 100%
+    height: 100%;
+    padding-top: 24px;
 }
 
 .header-container {
