--- a/client/src/app/selector/selector.component.html
+++ b/client/src/app/selector/selector.component.html
@@ -4,7 +4,7 @@
 <img src="/assets/evacademy.png" />
     </a>
 </div>
-<hr />
+<hr style="background-color: #BEBEBE;" />
 <div class="image-landing">
     <a routerLink="/lyrq-video">
         <img src="/assets/lyrq.png" />
