--- a/client/src/app/ev-academy/ev-academy.component.html
+++ b/client/src/app/ev-academy/ev-academy.component.html
@@ -1,5 +1,5 @@
 <div class="ev-container">
-    <mat-icon style="margin-right: 10px;">arrow_back</mat-icon><img src="/assets/evacademy.png" />
+    <a routerLink="/selector"><mat-icon style="margin-right: 10px;">arrow_back</mat-icon><img src="/assets/evacademy.png" /></a>
     <mat-list style="margin-left: 16px;">
         <mat-list-item><a routerLink="/ev-academy-charging">Charging</a></mat-list-item>
         <mat-list-item><a routerLink="/ev-academy-weather">Weather</a></mat-list-item>
